--- a/A2 site/css/mastercss.css
+++ b/A2 site/css/mastercss.css
@@ -1,55 +1,41 @@
 @charset "utf-8";
 
+#headertitle{
+	text-align: center;
+	display: block;
+}
+#headertitle img{
+	margin-top: -30px;
+	margin-bottom: -50px;
+}
 #navigation{
 	vertical-align: middle;
 	position: relative;
 	margin-left: auto;
 	margin: 10px 200px;
 }
-
-#headertitle{
-	
-	text-align: center;
-	display: block;
-
-}
-#headertitle img{
-	margin-top: -30px;
-	margin-bottom: -50px;
-}
-	
-
 body{
 	background-color: #CAE6EA;
 }
-
 nav ul{	
-	
+	padding:0;
 	color: white;
 	background-color: #018BBC;
-	
 }
-
 nav ul li {
-	padding: 10px 30px;	
 	display: inline-block;
 	position: relative;
 }
-
 nav ul li a{
+	padding: 10px 30px;	
+	display:block;
 	text-decoration: none;
 	color: white;
-	
 }
-
 nav li ul {
 	display: none;
 	list-style-type: none;
 	z-index: 1;
-}
-
-nav li:hover ul{
-	display: block;
 	position: absolute;
 	top: 100%;
 	left: 0;
@@ -57,22 +43,22 @@ nav li:hover ul{
 	padding: 0;
 	width: 100%;
 }
-
-nav li:hover ul li{
+nav li ul li{
 	margin: 0;
 	text-decoration: none;
-	display: flex;
-	padding-left: 10px;
+	display: block;
 }
-
-nav li:hover ul li a{
+nav li ul li a{
+	padding-left: 10px;
+	display:block;
 	color: black;
 }
-
+nav li:hover ul{
+	display: block;
+}
 nav li:hover{
 	background-color:gold;
 }
-
 footer {
 	color: white;
     background-color: #018BBC;
@@ -82,11 +68,9 @@ footer {
   	left: 0;
 	margin-top: 50px;
 }
-
 footer h1{
 	margin-left: 40px;
 }
-
 footer p{
 	padding-left: 150px;
 	font-size: 17px;
