--- a/A2 site/css/mastercss.css
+++ b/A2 site/css/mastercss.css
@@ -15,6 +15,7 @@
 
 body{
 	background-color: #CAE6EA;
+	margin:0px;
 }
 
 nav ul{	
@@ -28,7 +29,6 @@ nav ul{
 }
 
 nav ul li {
-	padding: 20px 30px;
 	display: inline-block;
 	position: relative;
 }
@@ -36,6 +36,8 @@ nav ul li {
 nav ul li a{
 	text-decoration: none;
 	color: black;
+	padding: 20px 30px;
+	display:block;
 	
 }
 
@@ -58,12 +60,12 @@ nav li:hover ul{
 nav li:hover ul li{
 	margin: 0;
 	text-decoration: none;
-	display: flex;
-	padding-left: 10px;
+	display:block;
 }
 
 nav li:hover ul li a{
 	color: black;
+	padding:30px 10px;
 }
 
 nav li:hover{
