--- a/A2 site/css/content.css
+++ b/A2 site/css/content.css
@@ -82,6 +82,7 @@
 }
 
 #fishproduct{
+	margin-top: 120px;
 	padding: 15px;
 	background-color: rgba(255,255,255,0.54);
 }
@@ -161,8 +162,7 @@ ul.picturelist li:hover span.textcaption {
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
     color: #000;
     text-decoration: none;
     cursor: pointer;
@@ -173,7 +173,6 @@ ul li, p, div{
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
 	font-size: 20px;
 }
-
 
 
 h2{
