--- a/A2 site/css/content.css
+++ b/A2 site/css/content.css
@@ -82,7 +82,6 @@
 }
 
 #fishproduct{
-	margin-top: 120px;
 	padding: 15px;
 	background-color: rgba(255,255,255,0.54);
 }
@@ -183,4 +182,9 @@ h2{
 h3{
 	background-color: rgba(154,237,255,1.00);
 	padding: 5px;
+}
+#content{
+	margin-top:100px;
+	align-content: center;
+	text-align: center;
 }
