--- a/A2 site/css/index.css
+++ b/A2 site/css/index.css
@@ -5,6 +5,10 @@
   	margin:0;
 }
 
+body{
+	background: url(../images/fishbubblesEdit.jpg);
+}
+
 .fixednavbar {
   	position: fixed;
   	top: 0;
@@ -20,6 +24,7 @@ nav ul{
 	text-align: right;
 	padding-right: 20px;
 	
+	
 }
 
 nav ul li {
@@ -27,6 +32,9 @@ nav ul li {
 	padding: 20px;	
 	display: inline-block;
 	position: relative;
+	transition-property: background;
+  	transition-duration: 1s;
+  	transition-timing-function: linear;
 }
 
 nav ul li a{
@@ -63,7 +71,7 @@ nav li:hover ul li a{
 }
 
 nav li:hover{
-	background-color: rgba(255,219,119,1.00);
+	background-color: #F07D39;
 }
 
 .content {
@@ -87,21 +95,47 @@ html>body .content {
 	background-color:rgba(155,237,255,1.00);
 	text-decoration: none;
  	margin-right: 60px;
+	transition-property: background, border;
+    transition-duration: 1s;
+    transition-timing-function: linear;
+}
+.button:hover{
+	background: #F07D39;
 }
 
 .redirect {
 	text-align: center;
 }
+.redirect a:hover{
+	text-decoration: underline;
+}
 
 .bigbutton{
 	cursor: pointer;
     border: none;
-    padding: 20px 20px;
+    padding: 10px;
     text-align: center;
     font-size: 20px;
-	background-color:rgba(130,235,239,1.00);
-	text-decoration: none;
+	background-color: #F07D39;
  	margin: 60px;
+	transition-property: background, color;
+    transition-duration: 2s;
+    transition-timing-function: ease-in;
+}
+
+.bigbutton:hover{
+	background: #978273;
+}
+
+.bigbutton a{
+	color: floralwhite;
+	text-shadow: 2px 3px 4px #9B9B9B;
+	transition-property:color;
+    transition-duration: 1s;
+    transition-timing-function: ease-in;
+}
+.bigbutton a:hover{
+	color: black;
 }
 
 #one {
@@ -109,19 +143,25 @@ html>body .content {
 }
 
 #backgroundimg{
-	background-image: url(../images/ClownFishWallpaper.jpg);
+	background-image: url(../images/clownfishwallpaper.jpg);
 	background-position: center;
 }
 
 #logoholder{
 	margin: auto;
+	margin-top: 30px;
+	animation: comein 3s; 
+}
+@keyframes comein{
+0%{
+	transform: translate3d(20px, 40px, 0px);
+    animation-timing-function: ease-out;}
 }
 
 #hometitle {
 	padding: 80px;
 	text-align: center;
-	background: rgba(255,255,255,0.7);
-
+	background-color: rgba(255,255,255,0.55);
 	
 }
 
@@ -130,6 +170,7 @@ html>body .content {
 	padding-top: -50px;
 	font-size: 25px;
 	bottom: 0px;
+	text-shadow: 2px 3px 4px #9B9B9B;
 }
 
 
@@ -141,23 +182,74 @@ html>body .content {
 #announcement{
 	text-align: center;
 	margin: 0;
-	padding-top: 200px;
-	padding-bottom: 100px;
+	padding: 70px 0;
+	
 }
 
 #announcement p{
-	font-size: 20px;
+	font-size: 18px;
 }
+
+#announcementContent{
+	text-align: center;
+	
+}
+
+#announcementContent a:hover span{
+	text-decoration: underline;
+}
+.announcementList{
+	box-shadow: 2px 4px 4px #939393;
+	padding: 12px 5px;
+	display: inline-block;
+	margin: 30px;
+	width: 350px;
+	transition-property: background, border-radius;
+    transition-duration: 1s;
+    transition-timing-function: ease-in-out;
+}
+
+.announcementList:hover{
+	background: #9BEDFF ;
+    border-radius: 10%;
+}
+
+
+
 
 h1, p, li {
 	font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
 }
 
+
+a{
+	text-decoration: none;
+	color: black;
+}
+
+
 footer {
+	color: rgba(0,0,102,1.00);
     background-color: rgba(194,244,255,1.00);
   	position: relative;
   	right: 0;
   	bottom: 0;
   	left: 0;
-	margin-top: 60px;
+	margin-top: 50px;
 }
+
+footer h1{
+	display: block;
+	margin: 10px;
+	margin-left: 40px;
+	float: left;
+}
+
+footer p{
+	padding-left: 150px;
+	font-size: 17px;
+	margin-right: 10px;
+	display: block;
+	text-align: right;
+}
+
