--- a/A2 site/css/mastercss.css
+++ b/A2 site/css/mastercss.css
@@ -81,7 +81,7 @@ nav li:hover ul li a{
 }
 
 nav li:hover{
-	background-color: rgba(255,219,119,1.00);
+	background-color: #F07D39;
 }
 
 nav a img{
