--- a/A2 site/css/index.css
+++ b/A2 site/css/index.css
@@ -75,15 +75,10 @@ nav li:hover{
 }
 
 .content {
-  	height:100%;
-  	min-height:100%;/*for mozilla*/
 	position: relative;
-	overflow: auto;
+
 }
 
-html>body .content {
-  	height: 100%;
-}
 
 .button{
 	cursor: pointer;
@@ -105,6 +100,7 @@ html>body .content {
 
 .redirect {
 	text-align: center;
+	padding-bottom: 5px;
 }
 .redirect a:hover{
 	text-decoration: underline;
@@ -140,6 +136,7 @@ html>body .content {
 
 #one {
 	background: rgba(155,237,255,1.00);
+	
 }
 
 #backgroundimg{
@@ -162,6 +159,7 @@ html>body .content {
 	padding: 80px;
 	text-align: center;
 	background-color: rgba(255,255,255,0.55);
+	
 	
 }
 
