update about us bg

--- a/A2 site/css/content.css
+++ b/A2 site/css/content.css
@@ -102,9 +102,9 @@ ul.picturelist li {
 /* About Us page */
 #fishtastic{
 	/* The background image on the about us section */
-	background: url(../images/aquariumdesignshop.jpg);
+	background: url(../images/ReefTankClown.jpg);
 	background-position: center;
-	padding: 20px 70px;
+	padding: 30px 70px;
 }
 
 #fishtastic .transparentbg{
