--- a/A2 site/css/mastercss.css
+++ b/A2 site/css/mastercss.css
@@ -1,5 +1,14 @@
 @charset "utf-8";
+/* this css is mainly used for the navigation and footer. also includes the very general style for whole body */
 
+.fixednavbar {
+  	position: fixed;
+  	top: 0;
+  	left: 0;
+	right: 0;
+  	z-index: 9999;
+  	width: 100%;
+}
 
 body{
 	margin:0px;
@@ -11,16 +20,6 @@ body{
   	margin:0;
 }
 
-.fixednavbar {
-  	position: fixed;
-  	top: 0;
-  	left: 0;
-	right: 0;
-  	z-index: 9999;
-  	width: 100%;
-	background-color: rgba(255,219,119,1.00);
-	
-}
 nav ul li span{
 	display: inline-block;
 	padding: 10px 40px;
